--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-  <!-- Sidebar -->
+  <!--- Sidebar -c-->
   <div class="sidebar">
     <div class="logo">
       <img style="width: 60px;height: 60px;border-radius: 7px; object-fit: cover;position: absolute; left: 3px;" src="https://play-lh.googleusercontent.com/-deHHbwBUh2I4dzTjq9n4ggBGPqJwKzj9pwvPqyaR-hPxzKN9QVJOBsZP_ShlCDmX60=w240-h480-rw" alt="">
