--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <hr>
     <nav class="nav-links mt-3">
       <ul>
-        <li><i class="fa fa-dashboard"></i><span>Dashboard</span></li>
-        <li><i class="fa fa-download"></i><span>Download</span></li>
+        <li class="active"><i class="fa fa-dashboard "></i><span>Dashboard</span></li>
+        <li><i class="fa fa-download"></i><span><a href="./Download/download.html">Download</a></span></li>
         <li><i class="fa fa-user-plus"></i><span>Create Account</span></li>
         <li><i class="fa fa-exchange"></i><span>Transfer</span></li>
       </ul>
@@ -37,9 +37,58 @@
       <i style="font-size: 32px;" class="fa fa-lightbulb"></i>
     </header>
   <!-- End of Header -->
+
+
     <!-- Content -->
+
     <main class="content">
-      <p>Input Content Here</p>
+      <div class="dashboard-content">
+  <h1 class="text-head">Welcome to Wing Bank Dashboard</h1>
+  <p>
+    <i>This dashboard is your one-stop solution to manage your finances, track transactions, and explore the features Wing Bank offers. Follow this guide to make the most out of our platform.</i>
+  </p>
+
+  <section class="features">
+    <h2>Key Features of Wing Bank</h2>
+    <ul>
+      <li><strong>Easy Transfers:</strong> Send and receive money instantly.</li>
+      <li><strong>Bill Payments:</strong> Pay utilities, loans, and more with a click.</li>
+      <li><strong>Account Management:</strong> View and update your account details anytime.</li>
+      <li><strong>24/7 Support:</strong> Get help whenever you need it.</li>
+    </ul>
+  </section>
+
+  <section class="how-to-use">
+    <h2>How to Use Wing Bank</h2>
+    <ol>
+      <li>How to create wing account?</li>
+      <li>Log in to your account using your registered email and password.</li>
+      <li>Navigate to the <strong>Transactions</strong> tab to transfer money or view history.</li>
+      <li>How to Top up?</li>
+      <li>Use the <strong>Pay Bills</strong> feature to settle your utility payments.</li>
+      <li>Visit the <strong>Profile</strong> section to update your personal information.</li>
+      <li>Explore the <strong>Help Center</strong> for assistance with any issues.</li>
+    </ol>
+  </section>
+
+  <section class="faq">
+    <h2>Frequently Asked Questions (FAQs)</h2>
+    <ul>
+      <li><strong>How do I reset my password?</strong> Go to the login page and click on “Forgot Password” to reset it.</li>
+      <li><strong>Is my data secure?</strong> Yes, Wing Bank uses advanced encryption to protect your data.</li>
+      <li><strong>How do I contact support?</strong> Use the 24/7 chat support or call our helpline.</li>
+      <li><strong>Can I view my transaction history?</strong> Yes, navigate to the <strong>Transactions</strong> tab to view detailed history.</li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Need Assistance?</h2>
+    <p>
+      If you have any questions or need help, contact us at <a href="mailto:support@wingbank.com">support@wingbank.com</a> or call <strong>+855 123 456 789</strong>.
+    </p>
+  </section>
+</div>
+
     </main>
     <!-- End of content -->
 
