--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="nav-links mt-3">
       <ul>
         <li class="active"><i class="fa fa-dashboard "></i><span>Dashboard</span></li>
-        <li><i class="fa fa-download"></i><span><a href="./Download/download.html">Download</a></span></li>
+        <li><i class="fa fa-download"></i><span><a href="./Download/download.html" class="link">Download</a></span></li>
         <li><i class="fa fa-user-plus"></i><span>Create Account</span></li>
         <li><i class="fa fa-exchange"></i><span>Transfer</span></li>
       </ul>
