--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="sidebar">
     <div class="logo">
       <img style="width: 60px;height: 60px; object-fit: cover;position: relative;padding: 0;margin: 0; border-radius: 7px;" src="https://play-lh.googleusercontent.com/-deHHbwBUh2I4dzTjq9n4ggBGPqJwKzj9pwvPqyaR-hPxzKN9QVJOBsZP_ShlCDmX60=w240-h480-rw" alt="">
-      <p style="margin-top: 15px; margin-right: 70px;">Wing Bank</p>
+      <p style="margin-top: 15px; margin-right: 90px;">Wing Bank</p>
     </div>
     <hr>
     <nav class="nav-links mt-3">
@@ -25,8 +25,8 @@
         <li class="active"><i class="fa fa-dashboard "></i><span>Dashboard</span></li>
         <li><i class="fa fa-download"></i><span><a href="./Download/download.html" class="link">Download</a></span></li>
         <li><i class="fa fa-user-plus"></i><span><a href="/CreateAccount/Create.html">Create Account</a></span></li>
-        <li><i class="fa fa-exchange"></i><span>Transfer</span></li>
-        <li><i class="fa fa-money"></i><span><a href="./LaonCompany/loan.html">Loan</a></span></li>
+        <li><i class="fa fa-exchange"></i><span><a href="/Transfer/transfer.html">Transfer</a></span></li>
+        <li><i class="fa fa-money"></i><span><a href="/LaonCompany/loan.html">Loan</a></span></li>
       </ul>
     </nav>
   </div>
@@ -68,9 +68,9 @@
         </ul>
       </div>
       <div class="col-lg-6">
-        <ul>
+        <ul style="list-style: none;">
           <li>
-            <img class="img-dash" src="https://z-p3-scontent.fpnh5-3.fna.fbcdn.net/v/t1.6435-9/194186404_4329346340432002_8966601176509021328_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFDH2Z1g2yaQx94mLGDkqtwSR660ELOHp5JHrrQQs4enp_mNVwqGwYbjaNoWuImFylZj_JM642evKgaNJBerpn3&_nc_ohc=Byvqj5Fx1m4Q7kNvgEyY62V&_nc_zt=23&_nc_ht=z-p3-scontent.fpnh5-3.fna&_nc_gid=AnD5rk3D9WSwY7m8Y4L8Z87&oh=00_AYAWvTWyqlkI5iIPRmaoF9wHYZU0_BvbZF1LhagStWdx_w&oe=677BEB5E" alt="">
+            <img style="position: absolute;" class="img-dash" src="https://z-p3-scontent.fpnh5-3.fna.fbcdn.net/v/t1.6435-9/194186404_4329346340432002_8966601176509021328_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFDH2Z1g2yaQx94mLGDkqtwSR660ELOHp5JHrrQQs4enp_mNVwqGwYbjaNoWuImFylZj_JM642evKgaNJBerpn3&_nc_ohc=Byvqj5Fx1m4Q7kNvgEyY62V&_nc_zt=23&_nc_ht=z-p3-scontent.fpnh5-3.fna&_nc_gid=AnD5rk3D9WSwY7m8Y4L8Z87&oh=00_AYAWvTWyqlkI5iIPRmaoF9wHYZU0_BvbZF1LhagStWdx_w&oe=677BEB5E" alt="">
           </li>
         </ul>
       </div>
@@ -79,6 +79,11 @@
 
   <section class="how-to-use">
     <h2>How to Use Wing Bank</h2>
+    <div class="row">
+      <div class="col-lg-12">
+        
+      </div>
+    </div>
     <ol>
       <li><a href="./Download/">How to download wing app?</a></li>
       <li><a href="./CreateAccount/">How to create wing account?</a></li>
