--- a/Download/download.html
+++ b/Download/download.html
@@ -25,7 +25,7 @@
         <li class="active"><i class="fa fa-dashboard "></i><span><a href="/index.html">Dashboard</a></span></li>
         <li><i class="fa fa-download"></i><span><a href="./Download/download.html" class="link">Download</a></span></li>
         <li><i class="fa fa-user-plus"></i><span><a href="/CreateAccount/Create.html">Create Account</a></span></li>
-        <li><i class="fa fa-exchange"></i><span><a href="/Transfer/"></a></span></li>
+        <li><i class="fa fa-exchange"></i><span><a href="/Transfer/transfer.html">Transfer</a></span></li>
         <li><i class="fa fa-money"></i><span><a href="/LaonCompany/loan.html">Loan</a></span></li>
 
       </ul>
