--- a/Transfer/transfer.html
+++ b/Transfer/transfer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wing Bank Guideline</title>
-  <link rel="stylesheet" href="/css/loan.css">
+  <link rel="stylesheet" href="/css/transfer.css">
   <link rel="icon" href="https://play-lh.googleusercontent.com/-deHHbwBUh2I4dzTjq9n4ggBGPqJwKzj9pwvPqyaR-hPxzKN9QVJOBsZP_ShlCDmX60">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,10 +23,10 @@
     <nav class="nav-links mt-3">
       <ul>
         <li class="active"><i class="fa fa-dashboard "></i><span><a href="/index.html">Dashboard</a></span></li>
-        <li><i class="fa fa-download"></i><span><a href="./Download/download.html" class="link">Download</a></span></li>
+        <li><i class="fa fa-download"></i><span><a href="/Download/download.html" class="link">Download</a></span></li>
         <li><i class="fa fa-user-plus"></i><span><a href="/CreateAccount/Create.html">Create Account</a></span></li>
-        <li><i class="fa fa-exchange"></i><span><a href="/Transfer/transfer.html">Transfer</a></span></li>
-        <li><i class="fa fa-money"></i><span><a href="/LaonCompany/loan.html">Loan</a></span></li>
+        <li><i class="fa fa-exchange"></i><span>Transfer</span></li>
+        <li><i class="fa fa-money"></i><span><a href="/Transfer/transfer.html">Loan</a></span></li>
       </ul>
     </nav>
   </div>
@@ -51,7 +51,7 @@
     <!-- Content -->
 
 <main class="content">
-    <p>Complet your loan page</p>
+    <p>Complet your transfer page</p>
 </main>
     <!-- End of content -->
 
@@ -63,6 +63,8 @@
     <!--End of footer -->
   </div>
 
-  <script src="/script.js"></script>
+ <script src="/js/transfer.js">
+
+ </script>
 </body>
 </html>
